--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portolio-website-1",
-  "homepage": "http://swbrockbank.com",
+  "homepage": "https://swbrock.github.io/PortfolioWebsite",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
